--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
                 <input type="text" placeholder="Что сделать..." id="nameInput">
                 <button id="myButton" class="addButton">Добавить</button>
             </div>
+            <div class="inputBlock">
+                <input type="text" placeholder="Что искать..." id="findInput">
+                <button id="clrButton" class="clrButton">Очистить</button>
+            </div>
         </div>
 
         <div class="warning hidden" id="warning">
